Align header menu with body content. Fixes #496. (#503)

--- a/static/v2/css/style.css
+++ b/static/v2/css/style.css
@@ -38,7 +38,7 @@ a:hover{
   opacity: 1;
 }
 
-main{
+main, .site-header {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
